<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizapp">クイズアプリ</string>
    <string name="difficulty">難易度選択</string>
    <string name="random">無差別問題</string>
    <string name="normal">ノーマル</string>
    <string name="hard">ハード</string>
    <string name="genre">ジャンル選択</string>
    <string name="title2">難易度選択画面</string>
    <string name="s17007">s17007</string>
    <string name="s17006">s17006</string>
    <string name="s17005">s17005</string>
    <string name="s17004">s17004</string>
    <string name="s17003">s17003</string>
    <string name="s17008">s17008</string>
    <string name="s17001">s17001</string>
    <string name="s17002">s17002</string>
    <string name="s17009">s17009</string>
    <string name="s17010">s17010</string>
    <string name="s17011">s17011</string>
    <string name="s17012">s17012</string>
    <string name="s06019">s06019</string>
</resources>
