<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/normal_button"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/hard_button"
            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hard_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/normal_button"
            app:layout_constraintBottom_toTopOf="@+id/genre_button"/>
    <Button
            android:text="@string/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/genre_button"
            app:layout_constraintTop_toBottomOf="@+id/hard_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.828"
            android:layout_marginTop="8dp" android:layout_marginBottom="48dp"/>
    <TextView
            android:text="@string/title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/title" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/normal_button" android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>