<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/quizapp"
            android:layout_width="246dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/difficulty_button" app:layout_constraintVertical_bias="0.503"
            android:textAlignment="center" android:textStyle="bold" android:textAllCaps="false"
            android:textSize="35sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/difficulty_button" android:text="@string/difficulty"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.1" android:textAlignment="center"
            android:textAllCaps="false" android:textStyle="bold" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toTopOf="@+id/randam_button"/>
    <Button
            android:text="@string/random"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/randam_button"
            app:layout_constraintTop_toBottomOf="@+id/difficulty_button" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.134" android:textAllCaps="false" android:textAlignment="center"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>